--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "@quasar/extras": "^1.15.5",
     "axios": "^1.1.2",
     "bootstrap-icons": "^1.9.1",
+    "lightvue": "^1.5.1",
     "pinia": "^2.0.21",
     "pinia-plugin-persistedstate": "^2.3.0",
     "quasar": "^2.10.2",
     "vue": "^3.2.38",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.1.5",
+    "vue-tiny-tabs": "^1.0.5",
     "vue3-uuid": "^1.0.0"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.2.3",
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^16.11.56",
+    "@types/node": "^16.18.11",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
