--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "noImplicitAny": false,
+  "allowJs": true,
+  "types": [ "node" ],
+  "typeRoots": [ "../node_modules/@types" ],
   "compilerOptions": {
     "lib": ["es2017", "dom"],
     "baseUrl": ".",
